--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
 .background {
   background: url('../src//assets//img/Fondo.svg');
 }
+
+
+.title-shadow {
+  text-shadow: 4px 2px 6px #4976ED;
+  filter: text;
+}
