--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,43 @@
 
+:root {
+  --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+  --font-size-base: clamp(0.2rem + 10px , 1vw, 30px);
+  --font-size-lg: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
+  --font-size-xl: clamp(15px, 1vw, 30px);
+  --font-size-2xl: clamp(20px, 1.5vw, 40px);
+  --font-size-3xl: clamp(30px, 2vw , 60px);
+  --icon-size: clamp(20px, 1.5vw, 30px);
+}
+
+
 .background {
   background: url('../src//assets//img/Fondo.svg');
 }
 
 
+
+.title {
+  font-size: var(--font-size-3xl);
+}
+
+.subtitle {
+  font-size: var(--font-size-2xl);
+}
+
+.icon-size {
+  font-size: var(--icon-size);
+}
+
+.download-icon {
+  font-size: clamp(25px, 2vw, 25px);
+}
+
+.text-content {
+  font-size: var(--font-size-base);
+}
+
+
+/* 
 .title-shadow {
   text-shadow: 4px 2px 6px #4976ED;
   filter: text;
@@ -61,7 +95,7 @@
 
 .mini-icon-purple {
   width: clamp(1.5em,1.5vw, 5em);
-}
+} */
 
 
 ::-webkit-scrollbar {
